--- a/CRM_System/ChartsPage.xaml
+++ b/CRM_System/ChartsPage.xaml
@@ -62,5 +62,22 @@
                 </DVC:PieSeries>
             </DVC:Chart.Series>
         </DVC:Chart>
+        <DVC:Chart Grid.Column="1" Grid.Row="2" Canvas.Top="80" Canvas.Left="10" Name="LineChart"
+           Background="LightSteelBlue">
+            <DVC:Chart.Series>
+                <DVC:LineSeries Title="Название поставь" 
+    		IndependentValueBinding="{Binding Path=Key}"
+    		DependentValueBinding="{Binding Path=Value}">
+                </DVC:LineSeries>
+            </DVC:Chart.Series>
+        </DVC:Chart>
+        <DVC:Chart Grid.Column="0" Grid.Row="2" Name="ColumnChartClient" Background="#F1F4FB">
+            <DVC:Chart.Series>
+                <DVC:ColumnSeries Title="Название" 
+    	            IndependentValueBinding="{Binding Path=Key}"
+    	            DependentValueBinding="{Binding Path=Value}">
+                </DVC:ColumnSeries>
+            </DVC:Chart.Series>
+        </DVC:Chart>
     </Grid>
 </Page>
